Change api/friends/send-invite code from 200 to 201 and edit result value.
