# Api/ChatCommunicator.Contracts/Dtos/Friendships/SendInviteDto.cs
@@ -1,0 +1,8 @@
+using System;
+
+namespace ChatCommunicator.Contracts.Dtos.Friendships;
+
+public class SendInviteDto
+{
+    public required Guid FriendshipInvitationId { get; set; }
+}
